# docs/swagger.yaml
@@ -35,27 +35,6 @@ definitions:
         example: account name
         type: string
     type: object
-  model.Admin:
-    properties:
-      id:
-        example: 1
-        type: integer
-      name:
-        example: admin name
-        type: string
-    type: object
-  model.Bottle:
-    properties:
-      account:
-        $ref: '#/definitions/model.Account'
-        type: object
-      id:
-        example: 1
-        type: integer
-      name:
-        example: bottle_name
-        type: string
-    type: object
   model.UpdateAccount:
     properties:
       name:
@@ -286,346 +265,6 @@ paths:
       summary: Upload account image
       tags:
       - accounts
-  /admin/auth:
-    post:
-      consumes:
-      - application/json
-      description: get admin info
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Admin'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-      security:
-      - ApiKeyAuth: []
-      summary: Auth admin
-      tags:
-      - accounts
-      - admin
-  /bottles:
-    get:
-      consumes:
-      - application/json
-      description: get bottles
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/model.Bottle'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-      summary: List bottles
-      tags:
-      - bottles
-  /bottles/{id}:
-    get:
-      consumes:
-      - application/json
-      description: get string by ID
-      operationId: get-string-by-int
-      parameters:
-      - description: Bottle ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Bottle'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-      summary: Show a bottle
-      tags:
-      - bottles
-  /examples/attribute:
-    get:
-      consumes:
-      - application/json
-      description: attribute
-      parameters:
-      - description: string enums
-        enum:
-        - A
-        - B
-        - C
-        in: query
-        name: enumstring
-        type: string
-      - description: int enums
-        enum:
-        - 1
-        - 2
-        - 3
-        in: query
-        name: enumint
-        type: integer
-      - description: int enums
-        enum:
-        - 1.1
-        - 1.2
-        - 1.3
-        in: query
-        name: enumnumber
-        type: number
-      - description: string valid
-        in: query
-        maxLength: 10
-        minLength: 5
-        name: string
-        type: string
-      - description: int valid
-        in: query
-        maximum: 10
-        minimum: 1
-        name: int
-        type: integer
-      - default: A
-        description: string default
-        in: query
-        name: default
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: answer
-          schema:
-            type: string
-        "400":
-          description: ok
-          schema:
-            type: string
-        "404":
-          description: ok
-          schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      summary: attribute example
-      tags:
-      - example
-  /examples/calc:
-    get:
-      consumes:
-      - application/json
-      description: plus
-      parameters:
-      - description: used for calc
-        in: query
-        name: val1
-        required: true
-        type: integer
-      - description: used for calc
-        in: query
-        name: val2
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: answer
-          schema:
-            type: integer
-        "400":
-          description: ok
-          schema:
-            type: string
-        "404":
-          description: ok
-          schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      summary: calc example
-      tags:
-      - example
-  /examples/groups/{group_id}/accounts/{account_id}:
-    get:
-      consumes:
-      - application/json
-      description: path params
-      parameters:
-      - description: Group ID
-        in: path
-        name: group_id
-        required: true
-        type: integer
-      - description: Account ID
-        in: path
-        name: account_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: answer
-          schema:
-            type: string
-        "400":
-          description: ok
-          schema:
-            type: string
-        "404":
-          description: ok
-          schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      summary: path params example
-      tags:
-      - example
-  /examples/header:
-    get:
-      consumes:
-      - application/json
-      description: custome header
-      parameters:
-      - description: Authentication header
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: answer
-          schema:
-            type: string
-        "400":
-          description: ok
-          schema:
-            type: string
-        "404":
-          description: ok
-          schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      summary: custome header example
-      tags:
-      - example
-  /examples/ping:
-    get:
-      consumes:
-      - application/json
-      description: do ping
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: pong
-          schema:
-            type: string
-        "400":
-          description: ok
-          schema:
-            type: string
-        "404":
-          description: ok
-          schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      summary: ping example
-      tags:
-      - example
-  /examples/securities:
-    get:
-      consumes:
-      - application/json
-      description: custome header
-      parameters:
-      - description: Authentication header
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: answer
-          schema:
-            type: string
-        "400":
-          description: ok
-          schema:
-            type: string
-        "404":
-          description: ok
-          schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      - OAuth2Implicit:
-        - admin
-        - write
-      summary: custome header example
-      tags:
-      - example
 securityDefinitions:
   ApiKeyAuth:
     in: header
