# main.go
@@ -5,9 +5,9 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
-	"github.com/swaggo/swag/example/celler/controller"
-	_ "github.com/swaggo/swag/example/celler/docs"
-	"github.com/swaggo/swag/example/celler/httputil"
+	"github.com/senomas/xgoapi/controller"
+	_ "github.com/senomas/xgoapi/docs"
+	"github.com/senomas/xgoapi/httputil"
 
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -70,25 +70,6 @@ func main() {
 			accounts.DELETE(":id", c.DeleteAccount)
 			accounts.PATCH(":id", c.UpdateAccount)
 			accounts.POST(":id/images", c.UploadAccountImage)
-		}
-		bottles := v1.Group("/bottles")
-		{
-			bottles.GET(":id", c.ShowBottle)
-			bottles.GET("", c.ListBottles)
-		}
-		admin := v1.Group("/admin")
-		{
-			admin.Use(auth())
-			admin.POST("/auth", c.Auth)
-		}
-		examples := v1.Group("/examples")
-		{
-			examples.GET("ping", c.PingExample)
-			examples.GET("calc", c.CalcExample)
-			examples.GET("groups/:group_id/accounts/:account_id", c.PathParamsExample)
-			examples.GET("header", c.HeaderExample)
-			examples.GET("securities", c.SecuritiesExample)
-			examples.GET("attribute", c.AttributeExample)
 		}
 	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
